[gd_scene load_steps=5 format=3 uid="uid://bypcl5y16t7xk"]

[ext_resource type="Script" path="res://Scenes/Boss/explosive_barrel.gd" id="1_freqq"]
[ext_resource type="SpriteFrames" uid="uid://cvu0euqhuklkr" path="res://Scenes/Boss/barrel.tres" id="1_mb1ct"]

[sub_resource type="CircleShape2D" id="CircleShape2D_o5ba4"]
radius = 24.0832

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dm3m2"]
radius = 11.0
height = 32.0

[node name="ExplosiveBarrel" type="Node2D"]
script = ExtResource("1_freqq")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." groups=["explosion"]]
sprite_frames = ExtResource("1_mb1ct")
animation = &"off"

[node name="EnemyHitBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitBox"]
shape = SubResource("CircleShape2D_o5ba4")

[node name="BombTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="HurtBox" type="Area2D" parent="."]
scale = Vector2(1, 0.922989)
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CapsuleShape2D_dm3m2")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="EnemyHitBox" to="." method="_on_enemy_hit_box_area_entered"]
[connection signal="timeout" from="BombTimer" to="." method="_on_bomb_timer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
